--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="col-lg-6  col-md-8"><input class="form-control rounded-pill ps-5 bg-white" type="search" placeholder="filter by title or id" id="search-box"></div>
             </div>
             <div class="text-center text-decoration-underline fw-bold my-3 lead">Blog Posts</div>
-            <div class="row gy-4 pb-5 posts-body">
+            <div class="row gy-4 py-5 posts-body">
             
             </div>
         </div>
